Version 3.2.0 of jchart2d from former CVS.