@@ -34,10 +34,41 @@ import junit.framework.TestSuite;
  * <p>
  * 
  * @author <a href="mailto:Achim.Westermann@gmx.de">Achim Westermann</a>
- * @version $Revision: 1.8 $
+ * @version $Revision: 1.10 $
  */
 public class TestRingBufferArrayFast
     extends TestCase {
+
+  /**
+   * Test suite for this test class.
+   * <p>
+   * 
+   * @return the test suite
+   */
+  public static Test suite() {
+
+    TestSuite suite = new TestSuite();
+    suite.setName(TestRingBufferArrayFast.class.getName());
+
+    suite.addTest(new TestRingBufferArrayFast("testAdd"));
+    suite.addTest(new TestRingBufferArrayFast("testIteratorF2L"));
+    suite.addTest(new TestRingBufferArrayFast("testIteratorL2F"));
+    suite.addTest(new TestRingBufferArrayFast("testSetBufferSize"));
+    suite.addTest(new TestRingBufferArrayFast("testSize"));
+
+    return suite;
+  }
+
+  /**
+   * Creates a test case with the given name.
+   * <p>
+   * 
+   * @param testName
+   *            the name of the test case.
+   */
+  public TestRingBufferArrayFast(final String testName) {
+    super(testName);
+  }
 
   /**
    * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#add(Object)}.
@@ -52,106 +83,6 @@ public class TestRingBufferArrayFast
   }
 
   /**
-   * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#size()}.
-   * <p>
-   */
-  public void testSize() {
-
-    RingBufferArrayFast<Integer> ringBuffer = new RingBufferArrayFast<Integer>(100);
-    System.out
-        .println("Adding 100 elements to a buffer with capacity of 100 with size assertions.");
-    for (int i = 0; i < 100; i++) {
-      Assert.assertEquals(i, ringBuffer.size());
-      ringBuffer.add(new Integer(i));
-    }
-    System.out
-        .println("Adding 10 elements to a full buffer with capacity of 100 with size assertions.");
-    for (int i = 0; i < 10; i++) {
-      ringBuffer.add(new Integer(i));
-      Assert.assertEquals(100, ringBuffer.size());
-    }
-
-  }
-
-  /**
-   * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#iteratorL2F()}.
-   * <p>
-   */
-  public void testIteratorL2F() {
-    IRingBuffer<Integer> ringBuffer = new RingBufferArrayFast<Integer>(10);
-    System.out.println("Adding 2 elements to a buffer of size 10");
-    for (int i = 0; i < 2; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    Assert.assertEquals(2, ringBuffer.size());
-    int value = 0;
-    for (Integer removed : ringBuffer) {
-      Assert.assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      Assert.assertEquals(removed.intValue(), value);
-      value++;
-    }
-
-    ringBuffer.clear();
-    Assert.assertEquals(0, ringBuffer.size());
-    value = 0;
-    System.out.println("Adding 1 element to a buffer of size 10");
-    for (int i = 0; i < 1; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    Assert.assertEquals(1, ringBuffer.size());
-    for (Integer removed : ringBuffer) {
-      Assert.assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      Assert.assertEquals(removed.intValue(), value);
-      value++;
-    }
-
-    ringBuffer.clear();
-    Assert.assertEquals(0, ringBuffer.size());
-    value = 0;
-    System.out.println("Adding 10 elements to a buffer of size 10");
-    for (int i = 0; i < 10; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    Assert.assertEquals(10, ringBuffer.size());
-    for (Integer removed : ringBuffer) {
-      Assert.assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      Assert.assertEquals(removed.intValue(), value);
-      value++;
-    }
-
-    ringBuffer.clear();
-    Assert.assertEquals(0, ringBuffer.size());
-    value = 2;
-    System.out.println("Adding 12 elements to a buffer of size 10");
-    for (int i = 0; i < 12; i++) {
-      ringBuffer.add(new Integer(i));
-    }
-    Assert.assertEquals(10, ringBuffer.size());
-    for (Integer removed : ringBuffer) {
-      Assert.assertNotNull("Element no. " + value + " is null.", removed);
-      // tests the order of the iterator:
-      Assert.assertEquals(value, removed.intValue());
-      value++;
-    }
-
-    System.out.println("Testing for side effects of hasNext()...");
-    Iterator<Integer> it = ringBuffer.iteratorL2F();
-    for (int i = 0; i < 100; i++) {
-      Assert.assertTrue(it.hasNext());
-    }
-
-    System.out.println("Testing hasNext() with iterator on empty buffer...");
-    ringBuffer.clear();
-    Assert.assertEquals(0, ringBuffer.size());
-    Assert.assertTrue(ringBuffer.isEmpty());
-    it = ringBuffer.iteratorL2F();
-    Assert.assertFalse(it.hasNext());
-  }
-
-  /**
    * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#iteratorF2L()}.
    * <p>
    */
@@ -159,7 +90,7 @@ public class TestRingBufferArrayFast
     IRingBuffer<Integer> ringBuffer = new RingBufferArrayFast<Integer>(10);
     System.out.println("Adding 2 elements to a buffer of size 10");
     for (int i = 0; i < 2; i++) {
-      ringBuffer.add(new Integer(i));
+      ringBuffer.add(Integer.valueOf(i));
     }
     Assert.assertEquals(2, ringBuffer.size());
     int value = 1;
@@ -178,7 +109,7 @@ public class TestRingBufferArrayFast
     value = 0;
     System.out.println("Adding 1 element to a buffer of size 10");
     for (int i = 0; i < 1; i++) {
-      ringBuffer.add(new Integer(i));
+      ringBuffer.add(Integer.valueOf(i));
     }
     Assert.assertEquals(1, ringBuffer.size());
     it = ringBuffer.iteratorF2L();
@@ -195,7 +126,7 @@ public class TestRingBufferArrayFast
     value = 9;
     System.out.println("Adding 10 elements to a buffer of size 10");
     for (int i = 0; i < 10; i++) {
-      ringBuffer.add(new Integer(i));
+      ringBuffer.add(Integer.valueOf(i));
     }
     Assert.assertEquals(10, ringBuffer.size());
     it = ringBuffer.iteratorF2L();
@@ -213,7 +144,7 @@ public class TestRingBufferArrayFast
     value = 11;
     System.out.println("Adding 12 elements to a buffer of size 10");
     for (int i = 0; i < 12; i++) {
-      ringBuffer.add(new Integer(i));
+      ringBuffer.add(Integer.valueOf(i));
     }
     Assert.assertEquals(10, ringBuffer.size());
     it = ringBuffer.iteratorF2L();
@@ -248,6 +179,84 @@ public class TestRingBufferArrayFast
   }
 
   /**
+   * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#iteratorL2F()}.
+   * <p>
+   */
+  public void testIteratorL2F() {
+    IRingBuffer<Integer> ringBuffer = new RingBufferArrayFast<Integer>(10);
+    System.out.println("Adding 2 elements to a buffer of size 10");
+    for (int i = 0; i < 2; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(2, ringBuffer.size());
+    int value = 0;
+    for (Integer removed : ringBuffer) {
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value++;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 0;
+    System.out.println("Adding 1 element to a buffer of size 10");
+    for (int i = 0; i < 1; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(1, ringBuffer.size());
+    for (Integer removed : ringBuffer) {
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value++;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 0;
+    System.out.println("Adding 10 elements to a buffer of size 10");
+    for (int i = 0; i < 10; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(10, ringBuffer.size());
+    for (Integer removed : ringBuffer) {
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(removed.intValue(), value);
+      value++;
+    }
+
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    value = 2;
+    System.out.println("Adding 12 elements to a buffer of size 10");
+    for (int i = 0; i < 12; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    Assert.assertEquals(10, ringBuffer.size());
+    for (Integer removed : ringBuffer) {
+      Assert.assertNotNull("Element no. " + value + " is null.", removed);
+      // tests the order of the iterator:
+      Assert.assertEquals(value, removed.intValue());
+      value++;
+    }
+
+    System.out.println("Testing for side effects of hasNext()...");
+    Iterator<Integer> it = ringBuffer.iteratorL2F();
+    for (int i = 0; i < 100; i++) {
+      Assert.assertTrue(it.hasNext());
+    }
+
+    System.out.println("Testing hasNext() with iterator on empty buffer...");
+    ringBuffer.clear();
+    Assert.assertEquals(0, ringBuffer.size());
+    Assert.assertTrue(ringBuffer.isEmpty());
+    it = ringBuffer.iteratorL2F();
+    Assert.assertFalse(it.hasNext());
+  }
+
+  /**
    * Test method for
    * {@link info.monitorenter.util.collections.RingBufferArrayFast#setBufferSize(int)}.
    * <p>
@@ -256,7 +265,7 @@ public class TestRingBufferArrayFast
     IRingBuffer<Integer> buffer = new RingBufferArrayFast<Integer>(3);
     Assert.assertEquals(3, buffer.getBufferSize());
     for (int i = 0; i < 3; i++) {
-      buffer.add(new Integer(i));
+      buffer.add(Integer.valueOf(i));
     }
     Assert.assertEquals(3, buffer.size());
     System.out.println("before setting size from 3 to 4: " + buffer.toString());
@@ -275,34 +284,25 @@ public class TestRingBufferArrayFast
   }
 
   /**
-   * Test suite for this test class.
+   * Test method for {@link info.monitorenter.util.collections.RingBufferArrayFast#size()}.
    * <p>
-   * 
-   * @return the test suite
    */
-  public static Test suite() {
+  public void testSize() {
 
-    TestSuite suite = new TestSuite();
-    suite.setName(TestRingBufferArrayFast.class.getName());
+    RingBufferArrayFast<Integer> ringBuffer = new RingBufferArrayFast<Integer>(100);
+    System.out
+        .println("Adding 100 elements to a buffer with capacity of 100 with size assertions.");
+    for (int i = 0; i < 100; i++) {
+      Assert.assertEquals(i, ringBuffer.size());
+      ringBuffer.add(Integer.valueOf(i));
+    }
+    System.out
+        .println("Adding 10 elements to a full buffer with capacity of 100 with size assertions.");
+    for (int i = 0; i < 10; i++) {
+      ringBuffer.add(Integer.valueOf(i));
+      Assert.assertEquals(100, ringBuffer.size());
+    }
 
-    suite.addTest(new TestRingBufferArrayFast("testAdd"));
-    suite.addTest(new TestRingBufferArrayFast("testIteratorF2L"));
-    suite.addTest(new TestRingBufferArrayFast("testIteratorL2F"));
-    suite.addTest(new TestRingBufferArrayFast("testSetBufferSize"));
-    suite.addTest(new TestRingBufferArrayFast("testSize"));
-
-    return suite;
-  }
-
-  /**
-   * Creates a test case with the given name.
-   * <p>
-   * 
-   * @param testName
-   *            the name of the test case.
-   */
-  public TestRingBufferArrayFast(final String testName) {
-    super(testName);
   }
 
 }
